--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "tsc -b && vite build --outDir dist",
+    "dev": "bunx vite --host 0.0.0.0",
+    "build": "tsc -b && bunx vite build --outDir dist",
     "lint": "bunx biome lint --write && bunx tsc --noEmit",
     "format": "bunx biome format --write",
-    "preview": "vite preview --host 0.0.0.0 --port 5173"
+    "preview": "bunx vite preview --host 0.0.0.0 --port 5173"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -32,7 +32,8 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "same-runtime": "^0.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
